--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Daniel Segarra: We Workin Here.">
   <p>I should probably talk about myself here...</p>
 </Layout>
 
-<style>
-
-</style>
+<style></style>
