--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Workers from '../components/Workers.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Workers from "../components/Workers.astro";
 ---
 
 <Layout title="Daniel Segarra: We Workin Here.">
-	<main>
+  <main>
     <section class="bio">
       <h2 style="font-size: 3.5rem;">Under Construction</h2>
       <p>My name is Daniel and I am a software engineer and educator.</p>
@@ -21,55 +21,55 @@ import Workers from '../components/Workers.astro';
 </Layout>
 
 <style>
-	body,
-html {
-  background-color: black;
-}
+  body,
+  html {
+    background-color: black;
+  }
 
-body {
-  color: white;
-  /*! height: 100vh; */
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  /* needed to take up full page height */
-  margin: 0 8px;
-}
+  body {
+    color: white;
+    /*! height: 100vh; */
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    /* needed to take up full page height */
+    margin: 0 8px;
+  }
 
-main {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  /*! justify-content: space-around; */
-  flex-direction: column;
-}
+  main {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    /*! justify-content: space-around; */
+    flex-direction: column;
+  }
 
-.bio {
-  display: block;
-  width: 80vw;
-  margin: 0px auto;
-  font-size: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+  .bio {
+    display: block;
+    width: 80vw;
+    margin: 0px auto;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.bio>h2 {
-  font-size: 3.5rem;
-}
+  .bio > h2 {
+    font-size: 3.5rem;
+  }
 
-.left-side {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .left-side {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.right-side {
-  font-size: 3rem;
-}
+  .right-side {
+    font-size: 3rem;
+  }
 
-p {
-  max-width: 980px;
-}
+  p {
+    max-width: 980px;
+  }
 </style>
