--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,30 +1,31 @@
---- 
+---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 
-import Nav from '../components/Nav.astro';
-import Footer from '../components/Footer.astro';
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-	<Nav />
-		<slot />
-	<Footer />
-		<script src="https://kit.fontawesome.com/d947b584dc.js" crossorigin="anonymous"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Nav />
+    <slot />
+    <Footer />
+    <script
+      src="https://kit.fontawesome.com/d947b584dc.js"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
-<style is:global>
-</style>
+<style is:global></style>
