--- a/src/pages/template.astro
+++ b/src/pages/template.astro
@@ -1,11 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Daniel Segarra: We Workin Here.">
+<Layout title="Daniel Segarra: We Workin Here." />
 
-</Layout>
-
-<style>
-
-</style>
+<style></style>
