footer colors and alignment and 404 page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,16 +5,15 @@
       <div>donate</div> -->
   <div class="socials">
     <a href="https://www.linkedin.com/in/danielsegarra36/"
-      ><i class="fa-brands fa-linkedin"></i></a
+      ><i class="fa-brands fa-linkedin-in"></i></a
     >
-    <a href="github.com/danielsegarra36/"
-      ><i class="fa-brands fa-square-github"></i></a
+    <a href="github.com/danielsegarra36/"><i class="fa-brands fa-github"></i></a
     >
     <a href="https://dribbble.com/DanielSegarra36"
-      ><i class="fa-brands fa-square-dribbble"></i></a
+      ><i class="fa-brands fa-dribbble"></i></a
     >
     <a href="https://www.behance.net/danielsegarra36"
-      ><i class="fa-brands fa-square-behance"></i></a
+      ><i class="fa-brands fa-behance"></i></a
     >
     <a href="https://www.figma.com/@danielsegarra36"
       ><i class="fa-brands fa-figma"></i></a
@@ -50,3 +49,18 @@
     >
   </div>
 </footer>
+
+<style>
+  footer {
+    justify-content: center;
+    padding: 0 2rem;
+  }
+
+  .socials svg {
+    height: 28px;
+    padding: 1rem;
+  }
+  .socials path {
+    fill: white;
+  }
+</style>
