--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,13 +1,13 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<Layout title="Daniel Segarra: We Workin Here.">
+<MainLayout title="Daniel Segarra: We Workin Here.">
   <main>
     <h1>404</h1>
     <p>Yeah that's not a thing...</p>
   </main>
-</Layout>
+</MainLayout>
 
 <style>
   main {
