--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<Layout title="Daniel Segarra: We Workin Here.">
+<MainLayout title="Daniel Segarra: We Workin Here.">
   <p>I should probably talk about myself here...</p>
-</Layout>
+</MainLayout>
 
 <style></style>
