--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<Layout title="Contact">
+<MainLayout title="Contact">
   <div class="container">
     <form
       action="https://formspree.io/f/xgejvblv"
@@ -28,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
       <button type="submit">Send</button>
     </form>
   </div>
-</Layout>
+</MainLayout>
 <style>
   /* From Form Provider  */
   body {
