--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,9 +1,10 @@
 ---
 interface Props {
   title: string;
+  footer?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, footer=true } = Astro.props;
 
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
@@ -22,10 +23,40 @@ import Footer from "../components/Footer.astro";
   <body>
     <Nav />
     <slot />
-    <Footer />
+    {footer ? <Footer /> : <div />}
     <script
       src="https://kit.fontawesome.com/d947b584dc.js"
       crossorigin="anonymous"></script>
   </body>
 </html>
-<style is:global></style>
+<style is:global>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body,
+  html {
+    background-color: black;
+  }
+
+  body {
+    color: white;
+    /*! height: 100vh; */
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    /* needed to take up full page height */
+    margin: 0 8px;
+  }
+  body,
+html {
+  background-color: black;
+}
+
+body {
+  color: white;
+  height: 100vh;
+  /* needed to take up full page height */
+  margin: 0 8px;
+}
+</style>
