--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -2,14 +2,18 @@
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Professional Work" footer={false}>
+<MainLayout title="Education">
   <nav>
     <ul>
       <li>
-        <a href="education.html"><mark>Professor Daniel</mark></a>
+        <a href="https://danielsegarra.dev/LemonPianoPillow/"
+          ><mark>Celebrating Student Accoplishments</mark></a
+        >
       </li>
       <li>
-        <a href="portfolio.html"><mark>Software Engineer</mark></a>
+        <a href="https://danielsegarra.dev/dreamy-compactor-slurp/"
+          ><mark>Start Learning TODAY!</mark></a
+        >
       </li>
     </ul>
   </nav>
@@ -28,7 +32,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   }
 
   ul,
-  li > a {
+  li>a {
     display: flex;
     text-align: center;
     align-items: center;
@@ -64,7 +68,11 @@ import MainLayout from "../layouts/MainLayout.astro";
     font-size: clamp(1.2rem, 0.6091rem + 3.7818vw, 2.5rem);
   }
 
-  li > a {
+  li:hover {
+    /*   z-index: 100; */
+  }
+
+  li>a {
     height: 100%;
     padding: 0 1rem;
     text-decoration: none;
@@ -73,8 +81,8 @@ import MainLayout from "../layouts/MainLayout.astro";
     transition: all 2s ease;
   }
 
-  li > a:focus,
-  li > a:hover {
+  li>a:focus,
+  li>a:hover {
     box-shadow: -10px 0px 5px 5px #484848;
     scale: 1.2;
   }
@@ -99,35 +107,37 @@ import MainLayout from "../layouts/MainLayout.astro";
     transition: all 2s ease;
   }
 
-  li:nth-child(1) > a:focus::after,
-  li:nth-child(1) > a:hover::after {
+  li:nth-child(1)>a:focus::after,
+  li:nth-child(1)>a:hover::after {
     background: linear-gradient(to bottom right, #5b8f691c, 90%, #4d795694);
   }
 
-  li:nth-child(2) > a:focus::after,
-  li:nth-child(2) > a:hover::after {
+  li:nth-child(2)>a:focus::after,
+  li:nth-child(2)>a:hover::after {
     background: linear-gradient(to bottom right, #a4ffd60d, 80%, #3a4442);
   }
 
-  li:nth-child(1),
-  li:nth-child(1):before,
-  li:nth-child(1) > a {
-    background: url("../assets/DanielTeachingCropped1.jpg");
-    background-position: right;
+  /* li:nth-child(1):before, */
+  li:nth-child(1)>a {
+    background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.edutopia.org%2Fstyles%2Fresponsive_2880px_original%2Fs3%2Fmasters%2F2018-11%2FiStock-1005285232_master.jpg&f=1&nofb=1&ipt=5299c124ebbf7cd9888f0e589459b65d3b66549803023b6f91550e03881bfdaf&ipo=images');
+    background-position: center;
     color: darkgoldenrod;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 
   li:nth-child(1):before {
     background-position: center top;
   }
 
-  li:nth-child(2) > a {
-    background: url("https://www.rawshorts.com/freeicons/wp-content/uploads/2017/02/svg_double_green_web-s-line-42-548x548.png");
+  li:nth-child(2)>a {
+    background: url('https://www.rawshorts.com/freeicons/wp-content/uploads/2017/02/svg_double_green_web-s-line-42-548x548.png');
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
+  }
+
+  li:nth-child(1) {
+    background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.edutopia.org%2Fstyles%2Fresponsive_2880px_original%2Fs3%2Fmasters%2F2018-11%2FiStock-1005285232_master.jpg&f=1&nofb=1&ipt=5299c124ebbf7cd9888f0e589459b65d3b66549803023b6f91550e03881bfdaf&ipo=images');
+    background-position: center;
   }
 
   li:nth-child(2):before {
@@ -135,13 +145,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   }
 
   mark {
-    padding: 0.5rem 1rem;
+    padding: .5rem 1rem;
     background-color: white;
-  }
-
-  li:hover {
-    z-index: 100;
-    background-size: contain;
-    background-repeat: no-repeat;
   }
 </style>
