--- a/src/pages/template.astro
+++ b/src/pages/template.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<Layout title="Daniel Segarra: We Workin Here." />
+<MainLayout title="TITLE" footer={true}/>
 
 <style></style>
