--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,6 @@
 <nav>
   <a href="/">home</a>
-  <a href="work.html">work</a>
+  <a href="work">work</a>
   <!-- <div id="logo"><img src="./logo.png" alt="LOGO" /></div> -->
   <a href="/">
     <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -19,8 +19,8 @@
         stroke-linecap="round"></path>
     </svg>
   </a>
-  <a href="about.html">about</a>
-  <a href="contact.html">contact</a>
+  <a href="about">about</a>
+  <a href="contact">contact</a>
   <!-- <div>blog</div> -->
 </nav>
 
