--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -38,6 +38,7 @@ import Footer from "../components/Footer.astro";
   body,
   html {
     background-color: black;
+    height: 100%;
   }
 
   body {
@@ -55,8 +56,8 @@ html {
 
 body {
   color: white;
-  height: 100vh;
+  /* height: 100vh; */
   /* needed to take up full page height */
-  margin: 0 8px;
+  /* margin: 0 8px; */
 }
 </style>
