--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -40,9 +40,11 @@ import MainLayout from "../layouts/MainLayout.astro";
 
   .container {
     max-width: 400px;
-    margin: 30px auto;
+    /* margin: 30px auto; */
+    margin: auto;
     background-color: #fff;
     padding: 20px;
+    padding-bottom: 3rem;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
