--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -6,10 +6,10 @@ import MainLayout from "../layouts/MainLayout.astro";
   <nav>
     <ul>
       <li>
-        <a href="education.html"><mark>Professor Daniel</mark></a>
+        <a href="/education"><mark>Professor Daniel</mark></a>
       </li>
       <li>
-        <a href="portfolio.html"><mark>Software Engineer</mark></a>
+        <a href="/portfolio"><mark>Software Engineer</mark></a>
       </li>
     </ul>
   </nav>
