--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,9 +26,7 @@
     >
     <a href="https://replit.com/@DanielSegarra36"
       ><svg
-        width="32"
-        height="32"
-        viewBox="0 0 32 32"
+        viewBox="3 3 27 27"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -64,7 +62,7 @@
   }
   .socials svg {
     height: 28px;
-    padding: 1rem;
+    margin: 1rem;
     color: white; /* the font-awesome icons will inherit this color (astro)*/
   }
   .socials path {
