--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Education">
+<MainLayout title="Education" footer={false}>
   <nav>
     <ul>
       <li>
