removing margin on body

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -48,7 +48,7 @@ import Footer from "../components/Footer.astro";
     display: grid;
     grid-template-rows: auto 1fr auto;
     /* needed to take up full page height */
-    margin: 0 8px;
+    /* margin: 0 8px; */
   }
   body,
 html {
