experimental styling changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -64,8 +64,12 @@
     height: 28px;
     margin: 1rem;
     color: white; /* the font-awesome icons will inherit this color (astro)*/
+    opacity: 0.7;
   }
   .socials path {
     fill: white;
+  }
+  .socials svg:hover {
+    opacity: 1;
   }
 </style>
