--- a/src/components/Workers.astro
+++ b/src/components/Workers.astro
@@ -644,6 +644,6 @@
     width: 100%;
     height: fit-content;
     max-width: 500px;
-    padding-bottom: 25px;
+    padding: 0 25px 1rem;
   }
 </style>
