--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,161 +1,11 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import ContactForm from "../components/ContactForm.astro";
+import PerspectiveContainer from "../layouts/PerspectiveContainer.astro";
 ---
 
 <MainLayout title="Contact">
-  <div class="animation-container">
-    <div class="container">
-      <form
-        action="https://formspree.io/f/xgejvblv"
-        method="POST"
-        enctype="multipart/form-data"
-      >
-        <label for="name"
-          >Name:
-          <input type="text" id="name" name="name" required />
-        </label>
-        <label>
-          Your Email:
-          <input id="email" type="email" name="email" required />
-        </label>
-        <label>
-          Message:
-          <textarea id="message" name="message"></textarea>
-        </label>
-        <label>
-          Relevant Files <em>(optional)</em>:
-          <input type="file" name="upload" />
-        </label>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </div>
+  <PerspectiveContainer id="black">
+    <ContactForm />
+  </PerspectiveContainer>
 </MainLayout>
-<style>
-  .animation-container {
-    /* color: red;
-    background-color: red; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    perspective: 1000px;
-  }
-  body {
-  }
-  .container {
-    font-family: Arial, sans-serif;
-    max-width: 400px;
-    /* margin: 30px auto; */
-    margin: auto;
-    background-color: #fff;
-    padding: 20px;
-    padding-bottom: 3rem;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-
-  input,
-  textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-
-  button {
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background-color: #45a049;
-  }
-
-  button:active {
-    background-color: #3e8e41;
-  }
-
-  /*************************************************/
-  /******************* MY STYLES *******************/
-  /*************************************************/
-  .container {
-    background-color: black;
-  }
-
-  .container {
-    width: 60%;
-    max-width: 350px;
-    position: relative;
-    left: 10px;
-    border: 8px solid #2a69a1;
-    box-shadow:
-      3px 3px 0.6rem #ec5353,
-      -1em 0 0.4em #919118;
-    /*   border-image: linear-gradient(to bottom, #4277db 90%, #f6b73c00) 30;
-  border-width: 4px;
-  border-style: solid; */
-  transform-style: preserve-3d;
-  }
-
-  form {
-    color: #d9d9d9;
-    /*   clear: both; */
-    overflow: hidden;
-  }
-
-  input,
-  textarea {
-    background-color: #e1e1e1;
-    color: black;
-    width: 90%;
-  }
-
-  input {
-    margin-top: 0.3rem;
-  }
-
-  button {
-    float: right;
-    margin: 0 auto;
-  }
-</style>
-<script>
-  // Movement Animation to happen
-  const card = document.querySelector(".container") ;
-  const container = document.querySelector(".animation-container");
-  
-  // Moving Animation Event
-  container.addEventListener("mousemove", (e) => {
-    let xAxis = (window.innerWidth / 2 - e.pageX) / 25;
-    let yAxis = (window.innerHeight / 2 - e.pageY) / 25;
-    card.style.transform = `rotateY(${xAxis}deg) rotatex(${yAxis}deg)`;
-  });
-  
-  // Animate In
-  container.addEventListener("mouseenter", (e) => {
-    card.style.transition = 'none';
-  });
-    
-  // Animate Out
-  container.addEventListener("mouseleave", (e) => {
-    card.style.transition = 'all .5s ease';
-    card.style.transform = 'rotateY(0deg) rotatex(0deg)';
-  });
-    
-</script>
