--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -105,6 +105,17 @@
       /* Fully reveal the path */
     }
   }
+  @keyframes draw-on-hover {
+    from {
+      stroke-dashoffset: 300;
+      /* Start with a larger dash offset to hide the entire path */
+    }
+
+    to {
+      stroke-dashoffset: 0;
+      /* Fully reveal the path */
+    }
+  }
 
   #animatedCurve {
     stroke-dasharray: 300;
@@ -115,10 +126,11 @@
     /* Animate the drawing using the 'draw' animation */
     opacity: 0.7;
   }
-
+  
   nav > a:nth-child(3):active #animatedCurve,
   nav > a:nth-child(3):hover #animatedCurve {
     opacity: 1;
     fill: burlywood;
+    animation: draw-on-hover 10s cubic-bezier(0.22, 0.61, 0.36, 1) forwards infinite;
   }
 </style>
