fixed github link in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,9 @@
     <a href="https://www.linkedin.com/in/danielsegarra36/"
       ><i class="fa-brands fa-linkedin-in"></i></a
     >
-    <a href="github.com/danielsegarra36/"><i class="fa-brands fa-github"></i></a
+    <a href="https://www.github.com/danielsegarra36/"><i class="fa-brands fa-github"></i></a
     >
-    <a href="https://dribbble.com/DanielSegarra36"
+    <a href="https://www.dribbble.com/DanielSegarra36"
       ><i class="fa-brands fa-dribbble"></i></a
     >
     <a href="https://www.behance.net/danielsegarra36"
