fixing links according to docs https://docs.astro.build/en/guides/deploy/github/

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,8 +1,8 @@
 <nav>
-  <a href="/">home</a>
-  <a href="/work">work</a>
+  <a href="/personal-website-astro/">home</a>
+  <a href="/personal-website-astro/work">work</a>
   <!-- <div id="logo"><img src="./logo.png" alt="LOGO" /></div> -->
-  <a href="/">
+  <a href="/personal-website-astro/">
     <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="animation.json" background="transparent" speed=".25" loop autoplay></lottie-player> -->
     <svg
@@ -19,8 +19,8 @@
         stroke-linecap="round"></path>
     </svg>
   </a>
-  <a href="/about">about</a>
-  <a href="/contact">contact</a>
+  <a href="/personal-website-astro/about">about</a>
+  <a href="/personal-website-astro/contact">contact</a>
   <!-- <div>blog</div> -->
 </nav>
 
