--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,14 +1,15 @@
 ---
 interface Props {
   title: string;
-  nav?: boolean;
   footer?: boolean;
+  navCheck?: boolean;
 }
 
-const { title, footer=true, nav=true } = Astro.props;
+const { title, footer=true, navCheck=true } = Astro.props;
 
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <!DOCTYPE html>
@@ -22,9 +23,10 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <link rel="manifest" href="../../manifest.json">
     <!-- <meta name="color-scheme" content="dark light" /> -->
+    <ViewTransitions />
     <title>{title}</title>
   </head>
-    {nav ? <Nav /> : <div />}
+    {navCheck ? <Nav /> : <div />}
     <slot />
     {footer ? <Footer /> : <div />}
     <script
