--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -23,7 +23,7 @@ import { ViewTransitions } from 'astro:transitions';
     <meta name="generator" content={Astro.generator} />
     <link rel="manifest" href="../../manifest.json">
     <!-- <meta name="color-scheme" content="dark light" /> -->
-    <ViewTransitions />
+    <ViewTransitions ></ViewTransitions>
     <title>{title}</title>
   </head>
     {navCheck ? <Nav /> : <div />}
