--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,64 +5,67 @@ interface Props {
   navCheck?: boolean;
 }
 
-const { title, footer=true, navCheck=true } = Astro.props;
+const { title, footer = true, navCheck = true } = Astro.props;
 
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
-import { ViewTransitions } from 'astro:transitions';
+// import { ViewTransitions } from "astro:transitions";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Daniel Segarra description portfolio education full stack software engineer" />
+    <meta
+      name="description"
+      content="Daniel Segarra description portfolio education full stack software engineer"
+    />
     <meta name="author" content="Daniel Segarra" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="manifest" href="../../manifest.json">
+    <link rel="manifest" href="../../manifest.json" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
-    <ViewTransitions ></ViewTransitions>
+    <!-- <ViewTransitions /> -->
     <title>{title}</title>
   </head>
+  <body>
     {navCheck ? <Nav /> : <div />}
     <slot />
     {footer ? <Footer /> : <div />}
     <script
       src="https://kit.fontawesome.com/d947b584dc.js"
       crossorigin="anonymous"></script>
-  </body>
+  </body><style is:global>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body,
+    html {
+      background-color: black;
+      height: 100%;
+    }
+
+    body {
+      color: white;
+      /*! height: 100vh; */
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      /* needed to take up full page height */
+      /* margin: 0 8px; */
+    }
+    body,
+    html {
+      background-color: black;
+    }
+
+    body {
+      color: white;
+      /* height: 100vh; */
+      /* needed to take up full page height */
+      /* margin: 0 8px; */
+    }
+  </style>
 </html>
-<style is:global>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body,
-  html {
-    background-color: black;
-    height: 100%;
-  }
-
-  body {
-    color: white;
-    /*! height: 100vh; */
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    /* needed to take up full page height */
-    /* margin: 0 8px; */
-  }
-  body,
-html {
-  background-color: black;
-}
-
-body {
-  color: white;
-  /* height: 100vh; */
-  /* needed to take up full page height */
-  /* margin: 0 8px; */
-}
-</style>
