trying out motion detection on mobile

--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -5,13 +5,19 @@
 </article>
 <style>
   .animation-container {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    perspective: 1000px;
+    height: 100%;
+    overflow: hidden;
+  }
+  .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    perspective: 1000px;
     height: 100%;
-  }
-  .container {
+    width: 100%;
     transform-style: preserve-3d;
   }
 </style>
