--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -73,8 +73,8 @@ let fourth = 132;
     /* justify-content: center; */
     justify-content: space-around;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
   }
 
   .bio {
@@ -87,6 +87,11 @@ let fourth = 132;
     justify-content: center;
     align-items: center;
   }
+
+  .svgMe {
+    height: 250px;
+  }
+
   .shadow {
     /* -webkit-filter: drop-shadow(3px 3px 2px var(--firstColor))
       drop-shadow(6px 6px 2px var(--secondColor))
