--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -107,7 +107,7 @@ let fourth = 132;
   }
 </style>
 <script define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
-window.addEventListener("deviceorientation", changeSVG, true);
+window.addEventListener("deviceorientation", changeSVG);
 
 function changeSVG(event) {
   console.log("HI FROM CHANGESVG");
@@ -124,24 +124,14 @@ function changeSVG(event) {
 
   // Modify the parameters for each feDropShadow element
   feDropShadows.forEach((feDropShadow, index) => {
-    // Example: Modify dx and dy
-    // feDropShadow.setAttribute('dx', (index + 1) * 3);
-    // feDropShadow.setAttribute('dy', (index + 1) * 3);
-
-    // Modify stdDeviation
-    // feDropShadow.setAttribute("stdDeviation", "5");
-
     // Modify flood-color based on some condition
-    const newFloodColor = `hsl(${(gamma * 75 * (index + 1)) / 360
+    const newFloodColor = `hsl(${((beta + gamma) * 3 * (index + 1)) % 360
       }, 100%, 64%)`;
     console.log(
       `x: ${e.pageX}, index: ${index}, hue: ${(e.pageX * 75 * (index + 1)) / 360
       }`
     );
     feDropShadow.setAttribute("flood-color", newFloodColor);
-
-    // Modify flood-opacity
-    feDropShadow.setAttribute("flood-opacity", "0.8");
   });
 }
 
@@ -191,7 +181,7 @@ container.addEventListener("mouseleave", (e) => {
   const feDropShadows = document.querySelectorAll("feDropShadow");
 
   // Modify the parameters for each feDropShadow element
-  feDropShadows.forEach((feDropShadow, index) => {
+    feDropShadows.forEach((feDropShadow, index) => {
       feDropShadow.setAttribute("flood-color", ogColors[index]);
     });
   });
