--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -9,15 +9,15 @@
     justify-content: center;
     align-items: center; */
     perspective: 1000px;
-    height: 100%;
-    overflow: hidden;
+    /* height: 100%; */
+    overflow-x: hidden;
   }
   .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     transform-style: preserve-3d;
   }
 </style>
