fixing height on about for mobile

--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -10,7 +10,9 @@
     align-items: center; */
     perspective: 1000px;
     /* height: 100%; */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    display: flex;
+    justify-content: center;
   }
   .container {
     display: flex;
