--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -4,6 +4,11 @@
   </section>
 </article>
 <style>
+  @media screen (max-height: 700px) {
+    .animation-container {
+      overflow-x: hidden;
+    }
+  }
   .animation-container {
     /* display: flex;
     justify-content: center;
@@ -18,8 +23,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100%;
-    width: 100%; */
+    height: 100%;
+    width: 100%;
     transform-style: preserve-3d;
   }
 </style>
