--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,19 +35,37 @@ let fourth = 132;
               dy="3"
               stdDeviation="3"
               flood-color=`hsl(${fourth}, 100%, 64%)`
-              flood-opacity="1"></feDropShadow>
+              flood-opacity="1"
+              ><animate
+                attributeName="stdDeviation"
+                values="0;4;0"
+                dur="2s"
+                repeatCount="indefinite"></animate></feDropShadow
+            >
             <feDropShadow
               dx="6"
               dy="6"
               stdDeviation="3"
               flood-color=`${secondColor}`
-              flood-opacity="1"></feDropShadow>
+              flood-opacity="1"
+              ><animate
+                attributeName="stdDeviation"
+                values="0;4;0"
+                dur="2s"
+                repeatCount="indefinite"></animate></feDropShadow
+            >
             <feDropShadow
               dx="9"
               dy="9"
               stdDeviation="3"
               flood-color=`${thirdColor}`
-              flood-opacity="1"></feDropShadow>
+              flood-opacity="1"
+              ><animate
+                attributeName="stdDeviation"
+                values="0;4;0"
+                dur="2s"
+                repeatCount="indefinite"></animate></feDropShadow
+            >
           </filter>
           <!-- <feMerge>
             <feMergeNode in="shadow1"></feMergeNode>
@@ -70,11 +88,11 @@ let fourth = 132;
     display: flex;
     text-align: center;
     align-items: center;
-    /* justify-content: center; */
-    justify-content: space-around;
+    justify-content: center;
+    /* justify-content: space-around; */
     flex-direction: column;
-    /* height: 100%;
-    width: 100%; */
+    height: 100%;
+    width: 100%;
   }
 
   .bio {
@@ -152,11 +170,17 @@ container.addEventListener("mousemove", (e) => {
   // Modify the parameters for each feDropShadow element
   feDropShadows.forEach((feDropShadow, index) => {
     // Example: Modify dx and dy
-    // feDropShadow.setAttribute('dx', (index + 1) * 3);
-    // feDropShadow.setAttribute('dy', (index + 1) * 3);
+    feDropShadow.setAttribute("dx", (window.innerWidth / 2 - e.pageX) / 25);
+    feDropShadow.setAttribute("dy", (window.innerWidth / 2 - e.pageX) / 25);
 
     // Modify stdDeviation
-    // feDropShadow.setAttribute("stdDeviation", "5");
+    // feDropShadow.setAttribute(
+    //   "stdDeviation",
+    //   (Math.floor(Math.random() * 365) + 8) % 10
+    // );
+    console.log(
+      `std deviation: ${(Math.floor(Math.random() * 365) + 8) % 10}`
+    );
 
     // Modify flood-color based on some condition
     const newFloodColor = `hsl(${(e.pageX * 75 * (index + 1)) / 360
@@ -168,7 +192,7 @@ container.addEventListener("mousemove", (e) => {
     feDropShadow.setAttribute("flood-color", newFloodColor);
 
     // Modify flood-opacity
-    feDropShadow.setAttribute("flood-opacity", "0.8");
+    // feDropShadow.setAttribute("flood-opacity", "0.8");
   });
 });
 
@@ -186,8 +210,10 @@ container.addEventListener("mouseleave", (e) => {
   // Modify the parameters for each feDropShadow element
   feDropShadows.forEach((feDropShadow, index) => {
     feDropShadow.setAttribute("flood-color", ogColors[index]);
+    feDropShadow.setAttribute("dx", (index + 1) * 3);
+    feDropShadow.setAttribute("dy", (index + 1) * 3);
   });
-});
+  });
 
   window.addEventListener("deviceorientation", changeSVG);
 </script>
