--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -4,9 +4,9 @@
   </section>
 </article>
 <style>
-  @media screen (max-height: 700px) {
+  @media screen and (min-height: 700px) {
     .animation-container {
-      overflow-x: hidden;
+      overflow: hidden;
     }
   }
   .animation-container {
