--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,6 +19,7 @@ let fourth = 132;
           non-traditional tech environments, to promote interdisciplinary
           solutions while strengthening existing and complimentary skills.
         </p>
+        <p id="stats"></p>
       </section>
       <svg
         class="shadow svgMe"
@@ -38,8 +39,8 @@ let fourth = 132;
               flood-opacity="1"
               ><animate
                 attributeName="stdDeviation"
-                values="0;4;0"
-                dur="2s"
+                values="10;4;10"
+                dur="3.7s"
                 repeatCount="indefinite"></animate></feDropShadow
             >
             <feDropShadow
@@ -50,8 +51,8 @@ let fourth = 132;
               flood-opacity="1"
               ><animate
                 attributeName="stdDeviation"
-                values="0;4;0"
-                dur="2s"
+                values="10;4;10"
+                dur="3.7s"
                 repeatCount="indefinite"></animate></feDropShadow
             >
             <feDropShadow
@@ -62,8 +63,8 @@ let fourth = 132;
               flood-opacity="1"
               ><animate
                 attributeName="stdDeviation"
-                values="0;4;0"
-                dur="2s"
+                values="10;4;10"
+                dur="3.7s"
                 repeatCount="indefinite"></animate></feDropShadow
             >
           </filter>
@@ -93,6 +94,7 @@ let fourth = 132;
     flex-direction: column;
     height: 100%;
     width: 100%;
+    max-width: 950px;
   }
 
   .bio {
@@ -123,6 +125,12 @@ let fourth = 132;
   #perspective-container {
     /* overflow: hidden; */
   }
+  @media screen and (min-width: 800px) {
+    main {
+      display: flex;
+      flex-direction: row;
+    }
+  }
 </style>
 <script define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
 function changeSVG(event) {
@@ -137,8 +145,7 @@ function changeSVG(event) {
 
   // Access the feDropShadow elements
   const feDropShadows = document.querySelectorAll("feDropShadow");
-  const bio = document.querySelector(".bio");
-  const stats = document.createElement("p");
+  const stats = document.querySelector("#stats");
 
   // Modify the parameters for each feDropShadow element
   feDropShadows.forEach((feDropShadow, index) => {
@@ -151,8 +158,7 @@ function changeSVG(event) {
     );
     feDropShadow.setAttribute("flood-color", newFloodColor);
 
-    stats.innerText += `alpha: ${alpha}\nbeta: ${beta}\ngamma: ${gamma}`;
-    bio.appendChild(stats);
+    stats.innerText = `alpha: ${alpha}\nbeta: ${beta}\ngamma: ${gamma}`;
   });
 }
 
@@ -172,6 +178,8 @@ container.addEventListener("mousemove", (e) => {
     // Example: Modify dx and dy
     feDropShadow.setAttribute("dx", (window.innerWidth / 2 - e.pageX) / 25);
     feDropShadow.setAttribute("dy", (window.innerWidth / 2 - e.pageX) / 25);
+    const currentColor = feDropShadow.getAttribute("flood-color");
+    console.log(`COLOR: ${currentColor}!!!!!!!!!!!!!!!!!!!!!!!!!!`);
 
     // Modify stdDeviation
     // feDropShadow.setAttribute(
@@ -183,8 +191,7 @@ container.addEventListener("mousemove", (e) => {
     );
 
     // Modify flood-color based on some condition
-    const newFloodColor = `hsl(${(e.pageX * 75 * (index + 1)) / 360
-      }, 100%, 64%)`;
+    const newFloodColor = `hsl(${Math.random() * 360}, 100%, 64%)`;
     console.log(
       `x: ${e.pageX}, index: ${index}, hue: ${(e.pageX * 75 * (index + 1)) / 360
       }`
@@ -198,7 +205,7 @@ container.addEventListener("mousemove", (e) => {
 
 // Animate In
 container.addEventListener("mouseenter", (e) => {
-  svgMe.style.transition = "none";
+  // svgMe.style.transition = "none";
 });
 
 // Animate Out
@@ -213,7 +220,7 @@ container.addEventListener("mouseleave", (e) => {
     feDropShadow.setAttribute("dx", (index + 1) * 3);
     feDropShadow.setAttribute("dy", (index + 1) * 3);
   });
-  });
+});
 
   window.addEventListener("deviceorientation", changeSVG);
 </script>
